# TD-JPEG-Crush-TOP

./: CMakeLists.txt  README.md
src/: CudaCheck.h  JpegCrushCUDA.cu  JpegCrushCUDA.h  JpegCrushTOP.cpp  JpegCrushTOP.h
